# RT-DETR

./: README_for_infer.md  README_for_train.md  pyproject.toml  update.md
rtdetrv2_pytorch/references/deploy/: rtdetrv2_torch copy.py  rtdetrv2_torch.py
